<resources>
    <string name="app_name">Dolbogram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_user_name">Ilya Kolisnichenko</string>
    <string name="settings_default_status">В сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_default_number">+37378111111</string>
    <string name="settings_label_phone">Нажмите чтобы изменить номер телефона</string>
    <string name="settings_default_login">ilyaKolisnichenko</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_default_bio">О себе</string>
    <string name="settings_label_bio">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_we_send">Мы отправили Вам SMS с кодом проверки на ваш телефон</string>
    <string name="register_hitn_default_code">- - - - - -</string>
    <string name="register_title_your_phote">Ваш телефон</string>
    <string name="register_toast_enter_phone">Введите номер телефона</string>
    <string name="register_phone_hint">- - - - - - - -</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>
    <string name="settings_toast_name_is_empty">Имя не может быть пустым</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="settings_hint_input_username">Новое имя пользователя</string>
    <string name="settings_toast_username_is_empty">Необходимо указать имя пользователя</string>
    <string name="settings_toast_username_is_not_unical">Пользователь с таким именем уже существует!</string>
    <string name="settings_hint_input_bio">Напишите немного о себе</string>
    <string name="app_title_contacts">Контакты</string>
    <string name="default_contact_item_fullname">Имя контакта</string>
    <string name="default_contact_item_state">в сети</string>
    <string name="app_title_chats">Dolbogram</string>
    <string name="app_title_settings">Настройки</string>
    <string name="register_country_code_hint">+ - - -</string>
    <string name="default_country_phone_code">+373</string>
    <string name="title_activity_test">TestActivity</string>
</resources>