<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.register.EnterCodeFragment">

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="@dimen/register_image_width_height"
        android:layout_height="@dimen/register_image_width_height"
        android:layout_margin="@dimen/margin_vertical_large"
        android:contentDescription="cd_register_image"
        android:src="@drawable/ic_register_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_text_enter_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_text_enter_code"
        android:textColor="@color/colorblack"
        android:textSize="@dimen/text_normal"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_image"
        android:layout_margin="@dimen/margin_small"/>

    <TextView
        android:id="@+id/register_text_we_send"
        style="@style/small_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_text_we_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text_enter_code"
        android:layout_margin="@dimen/margin_small"
        android:gravity="center"/>

    <EditText
        android:id="@+id/register_input_code"
        style="@style/edit_text"
        android:autofillHints=""
        android:gravity="center"
        android:maxLength="6"
        android:hint="@string/register_hitn_default_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text_we_send" />

</androidx.constraintlayout.widget.ConstraintLayout>